# EchoLoop

./: .gitattributes  AGENTS.md  CLA.md  README.md  config.py  llm.py  main.py  pyproject.toml  requirements.txt  settings.json  tts.py  ui.py
.github/workflows/: cla.yml
config/: settings.json
echoloop/: __init__.py  config.py  llm.py  llm_server_ctl.py  recorder.py  stt.py  test_prosody_utils.py  tts.py  ui.py
hwconfig/: detect_hardware.py
llm_server/: server.py
pronounce/: __init__.py  calibrate.py  requirements.txt  speech.py  test_speech.py
